@@ -129,3 +129,8 @@ M 100644 :1 rs
 (131)
 24..97&=C resolve
 (24,26,29,31,33,35,37,39,41,43,45,50,52,54,56,58,60,62,67,70,72,76,78,81,83,85,88,90,93,96)
+# Test pathset negation
+[~rs] resolve
+(6,7,9,23,24,28,46,48,49,51,52,57,58,63,64,65,68,69,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129)
+[~/rs/] resolve
+(6,7,9,23,24,28,46,48,49,51,52,57,58,63,64,65,68,69,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129)
