@@ -4,6 +4,7 @@ Repository head::
      Make --quiet an effective option when reading repositories.
      Added "gui" command for GUI browsing of repositories.
      Fixed a deep bug in the graft and unite commands.
+     Add prefix negation operator ~ for pathsets.
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
